Fix 2: bugs on mobile API

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,11 +3,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
-  font-family: 'Inter', system-ui !important;
 }
 
 * {
-  font-family: 'Inter', system-ui !important;
+  font-family: 'Inter', system-ui;
 }
 
 .wrapper {
